fix: align name column text

--- a/src/components/Atoms/TableRow/styles.module.scss
+++ b/src/components/Atoms/TableRow/styles.module.scss
@@ -13,8 +13,7 @@
   }
 
   th:first-child,
-  td:first-child,
-  td:nth-child(2) {
+  td:first-child {
     text-align: left;
   }
 
